# inplace_it

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
src/: alloc_array.rs  fixed_array.rs  guards.rs  lib.rs
src/guards/: memory_guard.rs  mod.rs  slice_memory_guard.rs  uninitialized_memory_guard.rs  uninitialized_slice_memory_guard.rs
src/tests/: drop_correctness.rs  mod.rs
tests/: alloc_array.rs  drop_correctness.rs  stackalloc_correctness.rs
